package lapr.project.model;


import java.util.List;

public class Port2dTree<E> extends Gen2dTree<Port>{


    public Port2dTree(){
        super();
    }

}
